[fix] icon toggle dark mode

--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@ button.btn-toggle {
   border-radius: 50%;
   background: #e1e1e1;
   border: 1px solid #1E1E1E;
-  color: #e1e1e1;
 
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
 
